re-wrote navbar, main intro, why we diff, and process sections to not use bootstrap; re-wrote the css as well to format sass;

--- a/contact.html
+++ b/contact.html
@@ -44,24 +44,25 @@
                         <form>
                             <div class="input">
                                 <div>First Name:</div>
-                                <input type="text" id="userFirstName" placeholder="e.g. John" required>
+                                <input type="text" id="contactFirstName" placeholder="e.g. John" required>
                             </div>
                             <div class="input">
                                 <div>Last Name:</div>
-                                <input type="text" id="userLastName" placeholder="e.g. Smith" required>
+                                <input type="text" id="contactLastName" placeholder="e.g. Smith" required>
                             </div>
                             <div class="input">
                                 <div>Phone Number:</div>
-                                <input type="text" id="userNumber" placeholder="e.g. 000-000-0000" required>
+                                <input type="text" id="contactNumber" placeholder="e.g. 000-000-0000" required>
                             </div>
                             <div class="input">
                                 <div>Email:</div>
-                                <input type="text" id="userEmail" placeholder="e.g. thegraphicjar@gmail.com" required>
+                                <input type="text" id="contactEmail" placeholder="e.g. thegraphicjar@gmail.com" required>
                                 <div class="input">
                                     <div>Your Message:</div>
-                                    <textarea id="userDesc" required rows="4"></textarea>
+                                    <textarea id="contactDesc" required rows="4"></textarea>
                                 </div>
                             </div>
+                            <button id="contactsub" class="btn btn-outline-secondary" type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -79,9 +80,9 @@
     <footer class="footer">
         <div id="links">
             <img src="assets/svg/tgj_logo.svg">
-            <div><a href="about.html">About Us</a></div>
-            <div><a href="terms.html">Terms and Agreement</a></div>
-            <div><a href="faq2.html">More FAQ</a></div>
+            <div><a href="##">About Us</a></div>
+            <div><a href="##">Terms and Agreement</a></div>
+            <div><a href="##">More FAQ</a></div>
             <div><a href="contact.html">Contact Us</a></div>
         </div>
     </footer>
