--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/form.css">
     <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <!-- Riteous Font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro|Lobster" rel="stylesheet">
 </head>
 
 <body>
@@ -123,9 +123,9 @@
     <footer class="footer">
         <div id="links">
             <img src="assets/svg/tgj_logo.svg">
-            <div><a href="about.html">About Us</a></div>
-            <div><a href="terms.html">Terms and Agreement</a></div>
-            <div><a href="faq2.html">More FAQ</a></div>
+            <div><a href="##">About Us</a></div>
+            <div><a href="##">Terms and Agreement</a></div>
+            <div><a href="##">More FAQ</a></div>
             <div><a href="contact.html">Contact Us</a></div>
         </div>
     </footer>
