--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
             <div class="design-button" id="intro-button">
             </div>
         </div>
+        <div class="chick">
+        </div>
     </main>
+    <!-- who are we -->
+<!--     <section class="who">
+        <div class="who-title">
+            <h2>Who Are We?</h2>
+        </div>
+        <div class="who-desc">
+            
+        </div>
+    </section> -->
     <!-- why we are different -->
     <section id="why-we-diff">
         <h3>Why Are We Different?</h3>
@@ -71,86 +82,6 @@
         </div>
     </section>
     <!-- 3 step process -->
-<!--     <section id="sec3">
-        <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-6">
-                <div id="vbbrowserbg">
-                    <div class="row" id="vbtop">
-                        <div class="row">
-                            <div id="red" class="vbcircles"></div>
-                            <div id="yellow" class="vbcircles"></div>
-                            <div id="green" class="vbcircles"></div>
-                        </div>
-                        <div class="row">
-                            <div id="vbarrows">
-                                <div id="leftarrow"></div>
-                                <div id="rightarrow"></div>
-                            </div>
-                            <div id="vbsearchbar">
-                                <div id="magglass"></div>
-                                www.thegraphicjar.com
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" id="vbbottom">
-                        <div id="vbcontent">
-                            <div id="contentone">
-                                <div class="row">
-                                    <div class="col-lg">
-                                        <div class="projects">
-                                            <div>www</div>
-                                            Web Design
-                                        </div>
-                                    </div>
-                                    <div class="col-lg">
-                                        <div class="projects">
-                                            <img src="assets/svg/tgj_logo.svg">
-                                            <div>Logo Design</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg">
-                                        <div class="projects">
-                                            <div></div>
-                                            Business Cards
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="vbstart">Start Project</div>
-                            </div>
-                            <div id="contenttwo" class="showprocess">
-                                <div class="shortbar"></div>
-                                <div class="longbar"></div>
-                                <div class="shortbar"></div>
-                                <div class="longbar"></div>
-                                <div class="shortbar"></div>
-                                <div class="longbar"></div>
-                                <div class="shortbar"></div>
-                                <div class="longbar"></div>
-                            </div>
-                            <div id="contentthree" class="showprocess">
-                                <p>Thank you</p>
-                                <p>for choosing the graphic jar</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button id="prev"><img src="assets/svg/prev_arrow.svg"></button>
-            <div class="col-lg-3">
-                <div id="diffsteps">
-                    <h2>Designs made easy!</h2>
-                    <h3 id="stepstitle"></h3>
-                    <p id="stepsdesc"></p>
-                    <br>
-                    <div id="boxone" class="circles activestep"></div>
-                    <div id="boxtwo" class="circles"></div>
-                    <div id="boxthree" class="circles"></div>
-                </div>
-            </div>
-            <button id="next"><img src="assets/svg/next_arrow.svg"></button>
-        </div>
-    </section> -->
     <section id="three-step-process">
         <div id="process-display">
             <div class="process-all">
