--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
 <head>
     <title>The Graphic Jar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Riteous Font -->
@@ -22,8 +24,8 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="form.html">Form</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="form.html">Form</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -32,8 +34,45 @@
     <!-- welcome section -->
     <main>
         <section class="projects">
-            <div class="projects-card">
-                
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="item">
+                        <div class="item-side">
+                            Text
+                        </div>
+                    </div>
+                    <!-- <div class="card">
+                        <div class="card-front card-front_1">
+                            <div class="projects-image_front_1"></div>
+                            <div class="projects-border_front_1"></div>
+                            <div class="projects-title_front_1">
+                                Websites
+                            </div>
+                        </div>
+                        <div class="projects-card_back">
+                            <p>Starting at:</p>
+                            <p>$500</p>
+                        </div>
+                    </div> -->
+                </div>
+                <div class="col-1-of-3">
+                    <div class="projects-card_front projects-card_front_2">
+                        <div class="projects-image_front_2"></div>
+                        <div class="projects-border_front_2"></div>
+                        <div class="projects-title_front_2">
+                            Logo Design
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <!-- <div class="projects-card_front projects-card_front_3">
+                        <div class="projects-image_front_3"></div>
+                        <div class="projects-border_front_3"></div>
+                        <div class="projects-title_front_3">
+                            Biz Cards
+                        </div>
+                    </div> -->
+                </div>
             </div>
         </section>
     </main>
