swapped out logo. added more questions to survey(color picker, about the project, about the company). deleted unecessary images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <div class="nav-main-name">
-          <img src="assets/svg/tgj_logo.svg" class="tgj-logo">
+          <img src="assets/svg/tgj_new_logo(white).svg" class="tgj-logo" alt="tgj_logo">
           <h1>the <span>graphic</span> jar</h1>
         </div>
         <div class="design-button" id="nav-button">
