added new main-pic. updated survey with other input and other questions

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </header>
     <!-- welcome section -->
     <main class="main-intro">
-      <div class="text-button">
-        <h2>Create designs easy<br> and effortlessly.</h2>
+      <div class="main-intro-info">
+        <h2>Create designs fun<br> and effortlessly.</h2>
         <p>The Graphic Jar is here to create your one of kind design project.</p>
         <div class="design-button" id="intro-button">
         </div>
@@ -48,6 +48,7 @@
           <h3><span class="header header-who">WHO</span><span class="header header-are">ARE</span><span class="header header-we">WE?</span></h3>
         </div>
         <div class="col-1-of-2">
+          <p class="who-title">Easy. Fun. Unique.</p>
           <p class="who-description">We are a dedicated group of designers, illustrators, and photographers who make it our mission to create your ideal projects easy and fun. Whether it be an entire branding project or a simple illustration, we do it all.</p>
           <a href="#" class="learn-more">Learn more</a>
         </div>
@@ -152,99 +153,7 @@
       </div>
     </section>
     <!-- FAQ -->
-<!--     <section class="faq">
-      <h2>FAQ</h2>
-      <div class="accordion" id="accordionExample">
-        <div class="row">
-          <div class="col-1-of-2">
-            <div class="card">
-              <h5 class="mb-0">
-              <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">
-              What forms of payment do we take?
-              </button>
-              </h5>
-              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
-                  <p>Our main forms of payment are through either check, cash, Venmo, Paypal, or Square Cash. If there is another form of payment that you prefer, we can surely accommodate.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-1-of-2">
-            <div class="card">
-              <h5 class="mb-0">
-              <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              What is our payment schedule?
-              </button>
-              </h5>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-2">
-              <div class="card">
-                <h5 class="mb-0">
-                <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" id="headingThree">
-                What forms of payment do we take?
-                </button>
-                </h5>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                  <div class="card-body">
-                    <p>Let us know if you have another form of payment that you prefer, we'll add it to the list!</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-1-of-2">
-              <div class="card">
-                <h5 class="mb-0">
-                <button class="btn btn-link card-header collapsed" id="headingFour" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                What is our payment schedule?
-                </button>
-                </h5>
-                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                  <div class="card-body">
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-1-of-2">
-            <div class="card">
-              <h5 class="mb-0">
-              <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" id="headingFive">
-              What forms of payment do we take?
-              </button>
-              </h5>
-              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-                <div class="card-body">
-                  <p>Let us know if you have another form of payment that you prefer, we'll add it to the list!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-1-of-2">
-            <div class="card">
-              <h5 class="mb-0">
-              <button class="btn btn-link card-header collapsed" id="headingSix" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-              What is our payment schedule?
-              </button>
-              </h5>
-              <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
-                <div class="card-body">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <section class="faq2">
+    <section class="faq">
       <h2>FAQ</h2>
       <div class="accordion" id="accordionExample">
         <div class="row">
