--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>The Graphic Jar</title>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="refresh" content="5"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
